# src/SpaceTradersUnitySDK/Api/SystemsApi.cs
@@ -565,12 +565,6 @@ namespace SpaceTradersUnitySDK.Api
             localVarRequestOptions.PathParameters.Add("systemSymbol", SpaceTradersUnitySDK.Client.ClientUtils.ParameterToString(systemSymbol)); // path parameter
             localVarRequestOptions.PathParameters.Add("waypointSymbol", SpaceTradersUnitySDK.Client.ClientUtils.ParameterToString(waypointSymbol)); // path parameter
 
-            // authentication (AgentToken) required
-            // bearer authentication required
-            if (!string.IsNullOrEmpty(this.Configuration.AccessToken) && !localVarRequestOptions.HeaderParameters.ContainsKey("Authorization"))
-            {
-                localVarRequestOptions.HeaderParameters.Add("Authorization", "Bearer " + this.Configuration.AccessToken);
-            }
 
             // make the HTTP request
             var localVarResponse = this.Client.Get<GetJumpGate200Response>("/systems/{systemSymbol}/waypoints/{waypointSymbol}/jump-gate", localVarRequestOptions, this.Configuration);
@@ -642,12 +636,6 @@ namespace SpaceTradersUnitySDK.Api
             localVarRequestOptions.PathParameters.Add("systemSymbol", SpaceTradersUnitySDK.Client.ClientUtils.ParameterToString(systemSymbol)); // path parameter
             localVarRequestOptions.PathParameters.Add("waypointSymbol", SpaceTradersUnitySDK.Client.ClientUtils.ParameterToString(waypointSymbol)); // path parameter
 
-            // authentication (AgentToken) required
-            // bearer authentication required
-            if (!string.IsNullOrEmpty(this.Configuration.AccessToken) && !localVarRequestOptions.HeaderParameters.ContainsKey("Authorization"))
-            {
-                localVarRequestOptions.HeaderParameters.Add("Authorization", "Bearer " + this.Configuration.AccessToken);
-            }
 
             // make the HTTP request
 
@@ -717,12 +705,6 @@ namespace SpaceTradersUnitySDK.Api
             localVarRequestOptions.PathParameters.Add("systemSymbol", SpaceTradersUnitySDK.Client.ClientUtils.ParameterToString(systemSymbol)); // path parameter
             localVarRequestOptions.PathParameters.Add("waypointSymbol", SpaceTradersUnitySDK.Client.ClientUtils.ParameterToString(waypointSymbol)); // path parameter
 
-            // authentication (AgentToken) required
-            // bearer authentication required
-            if (!string.IsNullOrEmpty(this.Configuration.AccessToken) && !localVarRequestOptions.HeaderParameters.ContainsKey("Authorization"))
-            {
-                localVarRequestOptions.HeaderParameters.Add("Authorization", "Bearer " + this.Configuration.AccessToken);
-            }
 
             // make the HTTP request
             var localVarResponse = this.Client.Get<GetMarket200Response>("/systems/{systemSymbol}/waypoints/{waypointSymbol}/market", localVarRequestOptions, this.Configuration);
@@ -794,12 +776,6 @@ namespace SpaceTradersUnitySDK.Api
             localVarRequestOptions.PathParameters.Add("systemSymbol", SpaceTradersUnitySDK.Client.ClientUtils.ParameterToString(systemSymbol)); // path parameter
             localVarRequestOptions.PathParameters.Add("waypointSymbol", SpaceTradersUnitySDK.Client.ClientUtils.ParameterToString(waypointSymbol)); // path parameter
 
-            // authentication (AgentToken) required
-            // bearer authentication required
-            if (!string.IsNullOrEmpty(this.Configuration.AccessToken) && !localVarRequestOptions.HeaderParameters.ContainsKey("Authorization"))
-            {
-                localVarRequestOptions.HeaderParameters.Add("Authorization", "Bearer " + this.Configuration.AccessToken);
-            }
 
             // make the HTTP request
 
@@ -869,12 +845,6 @@ namespace SpaceTradersUnitySDK.Api
             localVarRequestOptions.PathParameters.Add("systemSymbol", SpaceTradersUnitySDK.Client.ClientUtils.ParameterToString(systemSymbol)); // path parameter
             localVarRequestOptions.PathParameters.Add("waypointSymbol", SpaceTradersUnitySDK.Client.ClientUtils.ParameterToString(waypointSymbol)); // path parameter
 
-            // authentication (AgentToken) required
-            // bearer authentication required
-            if (!string.IsNullOrEmpty(this.Configuration.AccessToken) && !localVarRequestOptions.HeaderParameters.ContainsKey("Authorization"))
-            {
-                localVarRequestOptions.HeaderParameters.Add("Authorization", "Bearer " + this.Configuration.AccessToken);
-            }
 
             // make the HTTP request
             var localVarResponse = this.Client.Get<GetShipyard200Response>("/systems/{systemSymbol}/waypoints/{waypointSymbol}/shipyard", localVarRequestOptions, this.Configuration);
@@ -946,12 +916,6 @@ namespace SpaceTradersUnitySDK.Api
             localVarRequestOptions.PathParameters.Add("systemSymbol", SpaceTradersUnitySDK.Client.ClientUtils.ParameterToString(systemSymbol)); // path parameter
             localVarRequestOptions.PathParameters.Add("waypointSymbol", SpaceTradersUnitySDK.Client.ClientUtils.ParameterToString(waypointSymbol)); // path parameter
 
-            // authentication (AgentToken) required
-            // bearer authentication required
-            if (!string.IsNullOrEmpty(this.Configuration.AccessToken) && !localVarRequestOptions.HeaderParameters.ContainsKey("Authorization"))
-            {
-                localVarRequestOptions.HeaderParameters.Add("Authorization", "Bearer " + this.Configuration.AccessToken);
-            }
 
             // make the HTTP request
 
@@ -1014,12 +978,6 @@ namespace SpaceTradersUnitySDK.Api
 
             localVarRequestOptions.PathParameters.Add("systemSymbol", SpaceTradersUnitySDK.Client.ClientUtils.ParameterToString(systemSymbol)); // path parameter
 
-            // authentication (AgentToken) required
-            // bearer authentication required
-            if (!string.IsNullOrEmpty(this.Configuration.AccessToken) && !localVarRequestOptions.HeaderParameters.ContainsKey("Authorization"))
-            {
-                localVarRequestOptions.HeaderParameters.Add("Authorization", "Bearer " + this.Configuration.AccessToken);
-            }
 
             // make the HTTP request
             var localVarResponse = this.Client.Get<GetSystem200Response>("/systems/{systemSymbol}", localVarRequestOptions, this.Configuration);
@@ -1084,12 +1042,6 @@ namespace SpaceTradersUnitySDK.Api
 
             localVarRequestOptions.PathParameters.Add("systemSymbol", SpaceTradersUnitySDK.Client.ClientUtils.ParameterToString(systemSymbol)); // path parameter
 
-            // authentication (AgentToken) required
-            // bearer authentication required
-            if (!string.IsNullOrEmpty(this.Configuration.AccessToken) && !localVarRequestOptions.HeaderParameters.ContainsKey("Authorization"))
-            {
-                localVarRequestOptions.HeaderParameters.Add("Authorization", "Bearer " + this.Configuration.AccessToken);
-            }
 
             // make the HTTP request
 
@@ -1319,12 +1271,6 @@ namespace SpaceTradersUnitySDK.Api
                 localVarRequestOptions.QueryParameters.Add(SpaceTradersUnitySDK.Client.ClientUtils.ParameterToMultiMap("", "limit", limit));
             }
 
-            // authentication (AgentToken) required
-            // bearer authentication required
-            if (!string.IsNullOrEmpty(this.Configuration.AccessToken) && !localVarRequestOptions.HeaderParameters.ContainsKey("Authorization"))
-            {
-                localVarRequestOptions.HeaderParameters.Add("Authorization", "Bearer " + this.Configuration.AccessToken);
-            }
 
             // make the HTTP request
             var localVarResponse = this.Client.Get<GetSystems200Response>("/systems", localVarRequestOptions, this.Configuration);
@@ -1394,12 +1340,6 @@ namespace SpaceTradersUnitySDK.Api
                 localVarRequestOptions.QueryParameters.Add(SpaceTradersUnitySDK.Client.ClientUtils.ParameterToMultiMap("", "limit", limit));
             }
 
-            // authentication (AgentToken) required
-            // bearer authentication required
-            if (!string.IsNullOrEmpty(this.Configuration.AccessToken) && !localVarRequestOptions.HeaderParameters.ContainsKey("Authorization"))
-            {
-                localVarRequestOptions.HeaderParameters.Add("Authorization", "Bearer " + this.Configuration.AccessToken);
-            }
 
             // make the HTTP request
 
@@ -1469,12 +1409,6 @@ namespace SpaceTradersUnitySDK.Api
             localVarRequestOptions.PathParameters.Add("systemSymbol", SpaceTradersUnitySDK.Client.ClientUtils.ParameterToString(systemSymbol)); // path parameter
             localVarRequestOptions.PathParameters.Add("waypointSymbol", SpaceTradersUnitySDK.Client.ClientUtils.ParameterToString(waypointSymbol)); // path parameter
 
-            // authentication (AgentToken) required
-            // bearer authentication required
-            if (!string.IsNullOrEmpty(this.Configuration.AccessToken) && !localVarRequestOptions.HeaderParameters.ContainsKey("Authorization"))
-            {
-                localVarRequestOptions.HeaderParameters.Add("Authorization", "Bearer " + this.Configuration.AccessToken);
-            }
 
             // make the HTTP request
             var localVarResponse = this.Client.Get<GetWaypoint200Response>("/systems/{systemSymbol}/waypoints/{waypointSymbol}", localVarRequestOptions, this.Configuration);
@@ -1546,12 +1480,6 @@ namespace SpaceTradersUnitySDK.Api
             localVarRequestOptions.PathParameters.Add("systemSymbol", SpaceTradersUnitySDK.Client.ClientUtils.ParameterToString(systemSymbol)); // path parameter
             localVarRequestOptions.PathParameters.Add("waypointSymbol", SpaceTradersUnitySDK.Client.ClientUtils.ParameterToString(waypointSymbol)); // path parameter
 
-            // authentication (AgentToken) required
-            // bearer authentication required
-            if (!string.IsNullOrEmpty(this.Configuration.AccessToken) && !localVarRequestOptions.HeaderParameters.ContainsKey("Authorization"))
-            {
-                localVarRequestOptions.HeaderParameters.Add("Authorization", "Bearer " + this.Configuration.AccessToken);
-            }
 
             // make the HTTP request
 
